# dnsmasq-conf-rs

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
dnsmasq-conf/: errors.rs  lib.rs
dnsmasq-conf-rs/: cli.rs  grammar.pest  lib.rs
tests/: block.conf  example.conf  map.conf  sub-block.conf  test.rs
