[package]
name = "dnsmasq-conf"
version = "0.0.0"

description = """dnsmasq-conf is a safe library providing
data-structures to parse
[dnsmasq](https://thekelleys.org.uk/dnsmasq/doc.html) configuration
files from rust.
"""

readme = "README.md"
homepage = "https://crates.io/crates/dnsmasq-conf-rs"
license = "MIT OR Apache-2.0"
keywords = ["parser", "parsing", "network", "serialization", "utility"]
authors = ["Gabriel DeMoura <gabrielteratos@gmail.com>"]
categories = ["config", "parsing"]
edition = "2021"
autoexamples = false
autobenches = false


[lib]
name = "dnsmasq_conf"
path = "dnsmasq-conf/lib.rs"
# https://doc.rust-lang.org/reference/linkage.html
# crate-type = ["dylib"]  # #["lib", "dylib", "cdylib", "staticlib"]
doctest = false
bench = false

[dependencies]
clap = { version = "4.5.37", features = ["derive", "env", "string", "unicode", "wrap_help"] }
hickory-proto = "0.25.2"
iocore = { version = "3.0.3" }
pest = "2.8.0"
pest_derive = "2.8.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
iocore-test = "3.0.2"
k9 = "0.12.0"
